2012-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_get_bytes_written): New function.
	* device-src/device.h (device_get_bytes_written): New prototype.
	* device-src/ndmp-device.c, device-src/rait-device.c,
	  device-src/s3-device.c, device-src/tape-device.c,
	  device-src/vfs-device.c: Implement get_bytes_written.
	* device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-splitter.c: Use device_get_bytes_written.
	* perl/Amanda/Device.swg: Swig device_get_bytes_written.

2012-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: New CLIENT_ID, CLIENT_SECRET and
	  REFRESH_TOKEN properties. Handle OAUTH2.
	* device-src/s3.c: Handle OAUTH2.
	* device-src/s3.h (S3_api): Add S3_API_OAUTH2.
	* man/xml-source/amanda-devices.7.xml: Document new CLIENT_ID,
	  CLIENT_SECRET and REFRESH_TOKEN properties.

2012-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: Document -l do not unencrypt.

2012-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_accept_with_cond,
	  device_connect_with_cond): New functions.
	* device-src/device.h (device_accept_with_cond,
	  device_connect_with_cond): New prototypes.
	* device-src/ndmp-device.c (accept_with_cond_impl,
	  connect_with_cond_impl): new functions.
	* device-src/xfer-dest-taper-directtcp.c: Use device_accept_with_cond.
	* ndmp-src/ndmpconnobj.c (ndmp_connection_wait_for_notify_with_cond):
	  new function.
	* ndmp-src/ndmpconnobj.h (ndmp_connection_wait_for_notify_with_cond):
	  new prototype.
	* perl/Amanda/Device.swg: swig accept_with_cond and connect_with_cond.
	* perl/Amanda/Taper/Worker.pm: Ignore duplicate DONe message.
	* server-src/driver.c (handle_dumper_result): Always send dumper
	  result to taper.
	* server-src/dumper.c: Remove debugging statement.
	* xfer-src/element-glue.c: Add debugging statement.
	* xfer-src/xfer.c (xfer_cancel): Ignore duplicate cancel.