@@ -567,12 +567,13 @@ sub volume_is_labelable {
 			     err          => $sl->{'device_error'},
 			     slot         => $slot);
 	return 0;
-    } elsif ($dev_status & $DEVICE_STATUS_SUCCESS and
+    } elsif ($dev_status == $DEVICE_STATUS_SUCCESS and
 	     $f_type == $Amanda::Header::F_TAPESTART and
 	     $label !~ /$self->{'labelstr'}/) {
 	if (!$autolabel->{'other_config'}) {
 	    $self->_user_msg(slot_result  => 1,
-			     other_config => 1,
+			     label        => $label,
+			     does_not_match_labelstr => 1,
 			     slot         => $slot);
 	    return 0;
 	}
